[package]
name = "pixelsorter"
version = "0.1.0"
authors = ["Rishabh Bector <bector.rishabh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
text_io = "0.1.8"
anyhow = "1.0"
clap = "3.0.0-beta.2"
pbr = "1.0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3